Adjust hero signature placement and size

--- a/pages/home_landing_page.html
+++ b/pages/home_landing_page.html
@@ -84,34 +84,6 @@
                 <!-- Hero Content -->
                 <div class="flex-1 text-center lg:text-left">
                     <div class="fade-in">
-                        <!-- Signature with Real-time Signing Animation -->
-                        <div class="signature-wrapper mb-6 flex justify-center lg:justify-start" id="signature-wrapper">
-                            <svg id="signature-svg" class="signature-svg" viewBox="0 0 556 420" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <defs>
-                                    <filter id="filter0_d_1_5" x="0" y="0" width="555.358" height="420.007" filterUnits="userSpaceOnUse" color-interpolation-filters="sRGB">
-                                        <feFlood flood-opacity="0" result="BackgroundImageFix"/>
-                                        <feColorMatrix in="SourceAlpha" type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 127 0" result="hardAlpha"/>
-                                        <feOffset dy="4"/>
-                                        <feGaussianBlur stdDeviation="2"/>
-                                        <feComposite in2="hardAlpha" operator="out"/>
-                                        <feColorMatrix type="matrix" values="0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0 0.25 0"/>
-                                        <feBlend mode="normal" in2="BackgroundImageFix" result="effect1_dropShadow_1_5"/>
-                                        <feBlend mode="normal" in="SourceGraphic" in2="effect1_dropShadow_1_5" result="shape"/>
-                                    </filter>
-                                </defs>
-                                <g filter="url(#filter0_d_1_5)">
-                                    <path id="signature-path" 
-                                          d="M5.31685 399.507C7.31685 403.173 14.4168 410.507 26.8168 410.507C39.2168 410.507 45.6502 407.84 47.3168 406.507L61.8168 399.507C68.6502 396.173 84.9168 387.007 95.3168 377.007C108.317 364.507 114.317 357.507 138.317 327.007C157.517 302.607 187.65 244.173 200.317 218.007C209.317 199.007 229.717 153.607 239.317 124.007C248.917 94.4067 254.317 79.3401 255.817 75.5067L267.317 27.5067C268.984 18.6734 271.617 1.10675 268.817 1.50675C266.017 1.90675 264.317 5.67341 263.817 7.50674C260.65 14.3401 254.117 32.0067 253.317 48.0067C252.317 68.0067 250.817 64.7772 247.817 86.0067C245.417 102.99 243.484 129.083 242.817 140.007V244.507L247.317 279.007C247.817 280.84 249.317 284.707 251.317 285.507C253.817 286.507 254.817 287.007 256.317 287.507C257.817 288.007 268.317 269.507 271.317 250.507C273.717 235.307 294.984 148.84 305.317 107.507C302.484 140.007 296.917 207.607 297.317 218.007C297.717 228.407 300.15 245.34 301.317 252.507L305.317 254.007C311.484 244.84 324.617 222.107 327.817 204.507C331.017 186.907 346.484 128.507 353.817 101.507L349.317 192.507L350.817 218.007L357.817 254.007L368.817 282.007C372.317 287.34 381.417 298.907 389.817 302.507C398.217 306.107 404.317 304.007 406.317 302.507C407.984 301.173 410.117 296.407 405.317 288.007C400.517 279.607 377.65 269.173 366.817 265.007C348.65 259.507 307.617 248.907 288.817 250.507L253.817 247.507L195.317 249.007L107.817 256.507L143.317 250.507L218.817 246.007L291.817 240.007L375.317 233.507C440.984 228.507 567.417 221.107 547.817 231.507" 
-                                          stroke="#FCA311" 
-                                          stroke-width="3" 
-                                          fill="none"
-                                          stroke-linecap="round"
-                                          stroke-linejoin="round"
-                                          shape-rendering="crispEdges"/>
-                                </g>
-                            </svg>
-                        </div>
-                        
                         <h1 class="text-4xl sm:text-5xl lg:text-6xl font-bold text-text-primary mb-6">
                             Hi, I'm <span class="text-gradient">Ali Youssef</span>
                         </h1>
@@ -121,7 +93,20 @@
                         <p class="text-lg text-text-secondary mb-8 max-w-2xl mx-auto lg:mx-0 leading-relaxed">
                             Highly motivated and experienced Front-end React Developer seeking to build scalable and fast web applications, combined with AI tools like Vibe Coding to enhance user experience.
                         </p>
-                        <div class="flex flex-col sm:flex-row gap-4 justify-center lg:justify-start">
+                        <!-- Signature with Real-time Signing Animation -->
+                        <div class="signature-wrapper mt-2 mb-6 flex justify-center lg:justify-start" id="signature-wrapper">
+                            <svg id="signature-svg" class="signature-svg signature-hero" viewBox="0 0 1066 481" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                <path id="signature-path"
+                                      d="M202.166 438.282L257.166 379.782L313.166 313.782C329.5 293.115 366.066 249.282 381.666 239.282C401.166 226.782 404.666 213.782 476.666 160.782C534.266 118.382 546 118.449 544.666 123.782C546.833 124.782 538.466 143.081 487.666 208.281C436.866 273.481 412.166 307.115 406.166 315.781L354.666 379.782M988.166 152.781C906.166 166.448 719.066 200.081 626.666 225.281C534.266 250.481 199.833 348.115 44.1662 393.781C31.3329 397.448 4.66619 403.881 0.666193 400.281C-4.33381 395.781 104.166 338.281 190.166 315.281C258.966 296.881 282.833 291.281 286.166 290.781C288.999 288.948 317.366 287.781 408.166 297.781C498.966 307.781 466.999 352.948 439.666 374.281L626.666 118.281M471.666 480.281C554.666 343.781 729.166 63.0812 763.166 32.2812M622.666 290.781C629.833 280.615 648.766 259.081 667.166 254.281C690.166 248.281 637.666 272.281 647.666 285.281C657.666 298.281 694.166 245.781 703.166 248.281C712.166 250.781 685.666 256.281 682.666 282.281C682.666 285.281 687.066 285.281 688.666 285.281C690.666 285.281 734.666 244.781 741.166 245.781C747.666 246.781 712.666 269.281 725.666 270.281C736.066 271.081 747.666 261.281 752.166 256.281M783.166 232.781C776.666 238.615 763.766 254.281 764.166 270.281C764.666 290.281 733.166 293.281 737.166 287.781C741.166 282.281 793.166 257.281 796.666 252.781C800.166 248.281 814.666 243.781 815.166 230.781C815.666 217.781 780.166 265.781 796.666 257.781C813.166 249.781 828.166 247.281 835.666 234.281C843.166 221.281 825.666 241.429 826.666 242.281C827.666 243.133 820.666 255.281 831.666 249.781C842.666 244.281 872.666 229.281 879.166 220.281C885.666 211.281 872.7 216.281 866.666 225.281C860.632 234.281 860.166 240.281 864.166 242.281C867.366 243.881 886.833 230.281 896.166 223.281M1065.17 0.28125C998.166 98.2812 865.666 295.981 871.666 302.781M554.166 274.281L515.166 330.281M598.166 385.281C627.499 371.448 711.966 339.681 815.166 323.281"
+                                      stroke="#FCA311"
+                                      stroke-width="3"
+                                      fill="none"
+                                      stroke-linecap="round"
+                                      stroke-linejoin="round"
+                                      shape-rendering="crispEdges"/>
+                            </svg>
+                        </div>
+                        <div class="flex flex-col sm:flex-row gap-4 justify-center lg:justify-start ">
                             <a href="projects_portfolio.html" style="display:none;" class="btn-primary inline-flex items-center justify-center">
                                 View My Work
                                 <svg class="ml-2 w-5 h-5" fill="none" stroke="currentColor" viewBox="0 0 24 24">
@@ -142,7 +127,7 @@
                 <div class="flex-1 max-w-md lg:max-w-lg">
                     <div class="relative">
                         <div class="absolute inset-0 bg-gradient-to-r from-primary to-secondary rounded-full blur-3xl opacity-20 animate-pulse"></div>
-                        <img src="../assets/images/alideveloper.PNG" alt="Ali Youssef - Frontend Developer" class="relative z-10 w-full h-auto rounded-2xl shadow-custom-xl object-cover aspect-square" loading="lazy" onerror="this.src='https://images.pexels.com/photos/2379004/pexels-photo-2379004.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'; this.onerror=null;" />
+                        <img src="../assets/images/alideveloper.PNG" alt="Ali Youssef - Frontend Developer" class=" relative z-10 w-full h-auto rounded-2xl shadow-custom-xl object-cover aspect-square" loading="lazy" onerror="this.src='https://images.pexels.com/photos/2379004/pexels-photo-2379004.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'; this.onerror=null;" />
                     </div>
                 </div>
             </div>
