Update home landing page layout

--- a/pages/home_landing_page.html
+++ b/pages/home_landing_page.html
@@ -27,7 +27,7 @@
                     <a href="home_landing_page.html" class="text-xl font-bold text-gradient">
                         Ali Youssef
                     </a>
-                    
+                <p>test</p>
                 </div>
 
                 <!-- Desktop Navigation -->
