Update home landing page

--- a/pages/home_landing_page.html
+++ b/pages/home_landing_page.html
@@ -28,6 +28,8 @@
                         Ali Youssef
                     </a>
                 <p>test</p>
+                <p>test</p>
+                <p>test</p>
                 </div>
 
                 <!-- Desktop Navigation -->
