--- a/pages/skills_expertise.html
+++ b/pages/skills_expertise.html
@@ -14,7 +14,7 @@
 </head>
 <body class="font-sans antialiased">
     <!-- Navigation Header -->
-    <header class="sticky top-0 z-50 bg-background/80 backdrop-blur-md border-b border-border">
+    <header class="sticky top-0 z-50 liquid-glass-navbar">
         <nav class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="flex items-center justify-between h-16">
                 <!-- Logo/Name -->
